# GameEngine-Zelda

./: .clang-format  CMakeLists.txt
cs454/: CMakeLists.txt
cs454/GameEngine/: CMakeLists.txt
cs454/GameEngine/include/GameEngine/: App.h  Audio.h  BoxCollider2D.h  Camera.h  CharacterController.h  CircleCollider2D.h  Clipper.h  Collider.h  CollisionChecker.h  Debug.h  Game.h  GravityHandler.h  ImageLoader.h  Input.h  LatelyDestroyable.h  Math.h  MotionQuantizer.h  Resources.h  Scene.h  SceneManager.h  SpriteManager.h  System.h  Time.h
cs454/GameEngine/include/GameEngine/Animation/: Animation.h  AnimationFilm.h  AnimationFilmHolder.h  Animator.h  AnimatorManager.h  FlashAnimation.h  FlashAnimator.h  FrameListAnimation.h  FrameListAnimator.h  FrameRangeAnimation.h  FrameRangeAnimator.h  MovingAnimation.h  MovingAnimator.h  MovingPathAnimation.h  MovingPathAnimator.h  ScrollAnimation.h  ScrollAnimator.h  TickAnimation.h  TickAnimator.h
cs454/GameEngine/include/GameEngine/Graphics/: Button.h  CircuralBackground.h  Color.h  Event.h  Gridmap.h  Image.h  Light2D.h  Panel.h  Rect.h  Renderer.h  Sprite.h  Text.h  Texture.h  Tilemap.h  UIElement.h  Window.h
cs454/GameEngine/include/GameEngine/JSON/: AggregateProperty.h  ArrayProperty.h  BooleanProperty.h  Configurable.h  Configurator.h  NumericProperty.h  Property.h  StringProperty.h
cs454/GameEngine/src/GameEngine/: Audio.cpp  BoxCollider2D.cpp  CharacterController.cpp  CircleCollider2D.cpp  Clipper.cpp  CollisionChecker.cpp  Game.cpp  GravityHandler.cpp  Input.cpp  LatelyDestroyable.cpp  MotionQuantizer.cpp  SpriteManager.cpp  Time.cpp
cs454/GameEngine/src/GameEngine/Animation/: AnimationFilm.cpp  AnimationFilmHolder.cpp  Animator.cpp  AnimatorManager.cpp  FlashAnimator.cpp  FrameListAnimator.cpp  FrameRangeAnimator.cpp  MovingAnimator.cpp  MovingPathAnimator.cpp  ScrollAnimator.cpp  TickAnimator.cpp
cs454/GameEngine/src/GameEngine/Graphics/: Button.cpp  Event.cpp  Gridmap.cpp  Image.cpp  Light2D.cpp  Renderer.cpp  Sprite.cpp  Text.cpp  Tilemap.cpp  Window.cpp
cs454/GameEngine/src/GameEngine/JSON/: AggregateProperty.cpp  ArrayProperty.cpp  BooleanProperty.cpp  Configurator.cpp  NumericProperty.cpp  StringProperty.cpp
cs454/UnitTests/: CMakeLists.txt
cs454/UnitTests/Unit1/: CMakeLists.txt
cs454/UnitTests/Unit1/assets/terrain/: map1.tmj
cs454/UnitTests/Unit1/config/: app.json  map1.tmj  map2.tmj
cs454/UnitTests/Unit1/src/: Scene1.h  Tilelayer.h  TilemapMaker.h  Unit1.cpp  Unit1.h  main.cpp
cs454/UnitTests/Unit2/: CMakeLists.txt
cs454/UnitTests/Unit2/config/: app.json  map1.json  map2.json
cs454/UnitTests/Unit2/src/: GridMaker.cpp  GridMaker.h  TileColorHolder.h  Unit2.cpp  Unit2.h  main.cpp
cs454/UnitTests/Unit3/: CMakeLists.txt
cs454/UnitTests/Unit3/assets/terrain/: Link.tsj  Parapa-Palace.tsj  action-tilemap.tmj  background-tilemap.tmj  unit3.tiled-session
cs454/UnitTests/Unit3/config/: app.json  map.json
cs454/UnitTests/Unit3/src/: Unit3.cpp  Unit3.h  main.cpp
cs454/UnitTests/ZeldaII/: CMakeLists.txt
cs454/UnitTests/ZeldaII/assets/bitmaps/: NES - Zelda 2 The Adventure of Link - Palace Enemies.xcf
cs454/UnitTests/ZeldaII/assets/terrain/: Parapa-Palace-tileset.tsj  enemies-tileset.tsj  enemies-ts.tsj  item-tileset.tsj  items-tileset.tsj  link-tileset.tsj  menu-tileset.tsj  parapa-palace-tilemap.tmj  zeldaII-parapa-palace.tiled-session
cs454/UnitTests/ZeldaII/config/: app.json  map.json
cs454/UnitTests/ZeldaII/src/: AudioManager.cpp  AudioManager.h  GridMaker.cpp  Zelda.cpp  Zelda.h  main.cpp
cs454/UnitTests/ZeldaII/src/GameScene/: Bot.h  Door.h  Elevator.h  Enemy.h  GameScene.cpp  GameScene.h  Guma.h  Health.h  Item.h  PauseMenu.h  Player.h  PlayerHub.h  Spell.h  Stalfos.h  Wosu.h
cs454/UnitTests/ZeldaII/src/MenuScene/: ControlsMenu.h  MainMenu.h  MenuScene.cpp  MenuScene.h
